# sendflare-sdk-rust

./: .gitignore  Cargo.toml  README.md
src/: client.rs  lib.rs  models.rs
tests/: integration_test.rs
